--- a/fly.toml
+++ b/fly.toml
@@ -27,6 +27,13 @@ console_command = 'ipython'
     hard_limit = 100
     soft_limit = 10
 
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "30s"
+  method = "GET"
+  timeout = "5s"
+  path = "/health"
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
