--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.7
+deprecation==2.1.0
 distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.1
@@ -24,6 +25,7 @@ google-cloud-storage==2.16.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
+gotrue==2.5.4
 grpcio==1.64.0
 grpcio-status==1.62.2
 h11==0.14.0
@@ -43,6 +45,7 @@ orjson==3.10.3
 packaging==24.0
 pathspec==0.12.1
 platformdirs==4.2.2
+postgrest==0.16.8
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
@@ -53,20 +56,27 @@ pydantic_core==2.18.2
 Pygments==2.18.0
 PyJWT==2.8.0
 pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+realtime==1.0.6
 regex==2024.5.15
 requests==2.32.2
 rich==13.7.1
 rsa==4.9
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
+storage3==0.7.6
+StrEnum==0.4.15
+supabase==2.5.1
+supafunc==0.4.6
 tiktoken==0.7.0
 tqdm==4.66.4
 typer==0.12.3
-typing_extensions==4.12.0
+typing_extensions==4.12.2
 ujson==5.10.0
 uritemplate==4.1.1
 urllib3==2.2.1
